--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-range": "^1.8.12",
-    "reactstrap": "^9.0.3"
+    "react-slick": "^0.29.0",
+    "reactstrap": "^9.0.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "8.17.0",
