--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "next": "^12.1.6",
+    "nouislider": "^15.6.0",
     "npm": "^8.12.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
