--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.7",
+    "@mui/styled-engine-sc": "^5.8.0",
     "bootstrap": "^5.1.3",
     "next": "^12.1.6",
     "nouislider": "^15.6.0",
@@ -19,9 +23,11 @@
     "react-range": "^1.8.12",
     "react-slick": "^0.29.0",
     "reactstrap": "^9.0.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/react-slider": "^1.3.1",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6"
   }
