--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "nouislider": "^15.6.0",
     "npm": "^8.12.1",
     "react": "^18.1.0",
+    "react-bootstrap-table2-filter": "^1.3.3",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
+    "react-input-range": "^1.3.0",
     "react-range": "^1.8.12",
     "react-slick": "^0.29.0",
     "reactstrap": "^9.0.3",
