--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "npm": "^8.12.1",
     "react": "^18.1.0",
     "react-bootstrap-table2-filter": "^1.3.3",
+    "react-burger-menu": "^3.0.8",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-input-range": "^1.3.0",
@@ -26,7 +27,8 @@
     "react-slick": "^0.29.0",
     "reactstrap": "^9.0.3",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@types/react-slider": "^1.3.1",
