--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@mui/material": "^5.8.7",
     "@mui/styled-engine-sc": "^5.8.0",
     "bootstrap": "^5.1.3",
+    "multiselect-react-dropdown": "^2.0.25",
     "next": "^12.1.6",
     "nouislider": "^15.6.0",
     "npm": "^8.12.1",
+    "primeicons": "^5.0.0",
+    "primereact": "^8.3.0",
     "react": "^18.1.0",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-burger-menu": "^3.0.8",
@@ -24,6 +27,7 @@
     "react-icons": "^4.4.0",
     "react-input-range": "^1.3.0",
     "react-range": "^1.8.12",
+    "react-select": "^5.4.0",
     "react-slick": "^0.29.0",
     "reactstrap": "^9.0.3",
     "slick-carousel": "^1.8.1",
